# DNArm

./: INSTALL  LICENSE  Makefile.am  README  configure.ac  fgm test cases.alpha.xlsx
src/: Makefile.am  cgm.c  cgmcl.c  cgmcl.cl  cgmcl2.cl  cldb.c  cldb.h  ctb.c  cvdb.c  cvdb.h  db-test.c  db.c  db.h  db_test.c  fgm.c  fgm.h  fgm.seq.h  fgm_interface.c  fgm_interface.omp.c  fgmcl.c  fgmcl.cl  fgmcl.h  gdbm.c  genome-geometry.c  genome-index.c  index.c  index.c.save  index.save.c  memdb.c  pindex.c  readgen.c  samplecl.c  samplecl.cl  tcadb.c  tchdb.c
src/cgmtest/: cgmcl_image.cl  cgmtest.c  openmptest.c
src/cgmtest-noah/: Makefile  README  cgmcl_cached.cl  cgmcl_image.cl  cgmhelper.h  cgmtest.c  cgmtest_cached.c  cgmtest_image.c  output  setPaths  tester
src/fgmtest/: a.out  fgm.bak.c  fgm.c  fgm.h.gch  fgm_interface.c  fgm_interface.omp.c  fgm_test.c  fgm_test.ocl.c  fgm_test.omp.c  fgmcl (copy).cl  fgmcl.c  fgmcl.cl  fgmcl.h  fgmcl.h.gch  temp.c
src/fgmtest/sequential/: fgm.h  fgm_test.c  readme
